# Autonomous-Data-Architect

./: .gitignore  PROGRESS.md  README.md  all_cases.json  all_cases2.json  annotation_cases.jsonl  annotation_cases1.jsonl  convertJson2Jsonl.py  converted_rschema.jsonl  converted_test_cases.jsonl  pyproject.toml  pytest.ini  rschema_to_schema.py  rschema_to_schema1.py  run_evaluation.py  run_human_stress_tests.py  run_large_test.py  run_llm4db_batch.py  run_pipeline.py  run_rschema_batch.py  schema_to_rschema.py  test_cases.json  test_cases.jsonl  test_cases.py  test_cases2.jsonl  test_schema.py
paper/: main.tex  references.bib
src/evaluation/data_level/: data_eval.py  distributions.py
src/evaluation/schema_level/: RSchemaAPI.py  schema_eval.py
src/orchestration/stage1/: documentation.py  entry.py  loop_config.py  models.py
src/orchestration/stage2/: documentation.py  entry.py  models.py  refinement_sharding.py  utils.py
src/orchestration/stage3/: context_filter.py  documentation.py  entry.py  models.py
src/orchestration/stage4/: documentation.py  entry.py  models.py
src/orchestration/stage5/: documentation.py  entry.py  models.py
src/orchestration/stage6/: documentation.py  entry.py  models.py
src/pipeline/prompt_engineer/: agent.py  models.py  prompt.txt
src/pipeline/stage2/: example.py
src/tests/: conftest.py
src/util/: ablation.py  agent.py  dist_miner.py  documentation.py  error_formatter.py  invoke.py  matching.py  patching_engine.py  retry_loop.py  schema_patch.py  schema_utils.py  sharding_utils.py  web_search.py
src/util/core/: agent.py  (+2 more)
(+169 files in other folders)
